# games

./: .gitignore  Cargo.toml  README.md  index.html  pyproject.toml
assets/: l200.json  letters.html  man.json  tree.json  words.html  words.js
assets/l200/: config.json
assets/logan/: config.json
src/: algebra.rs  animation.rs  button.rs  compat.rs  geometry.rs  layout.rs  lib.rs  main.rs  model.rs  numerical.rs  physics.rs  solver.rs  text.rs  texture.rs
src/games/: apples.rs  balls.rs  drive.rs  letters.rs  mod.rs  mouse.rs  running.rs
src/games/balls/: geometry.rs  mod.rs  physics.rs
src/games/drive/: mod.rs  pipeline.rs  terrain.rs  vehicle.rs
src/games/running/: mod.rs  objects.rs
yarik/: __init__.py  __main__.py  image.py  runner.py  utils.py
yarik/games/: collecting.py  counting.py  mouse.py
