[package]
name = "yarik"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
futures = "0.3.31"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
