[tool.poetry]
name = "yarik"
version = "0.1.0"
description = "Simple games"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
